# F25_Team8_DARPAChallengeTriageDrone

./: README.md
Documentation/: IMPORTANT - How To Use (infos).md
Documentation/3D Models/: Drone Bellypack (Assembly).f3z
Documentation/Meeting Minutes/: Minutes - 2025-09-15.md  Minutes - 2025-09-22.md  Minutes - 2025-09-29.md  Minutes - 2025-10-06.md  Minutes - 2025-10-13.md  Minutes - 2025-10-20.md  Minutes - 2025-10-27.md  Minutes - 2025-11-10.md  Minutes - 2025-11-17.md  Minutes - 2025-11-24.md  Minutes - 2025-12-01.md  Minutes - 2025-12-08.md  Minutes - 2026-01-28.md  Minutes - 2026-02-04.md  Minutes - 2026-02-11.md  Minutes - 2026-02-18.md  Minutes - 2026-02-25.md  Minutes - 2026-03-04.md  Minutes - 2026-03-11.md  Minutes - 2026-03-25.md  Minutes - 2026-04-01.md  Minutes - 2026-04-08.md  Minutes - 2026-04-15.md  Minutes - 2026-04-22.md
Reports/: Team Contract Specification.md
Reports/Conceptual Design/: Conceptual Design.md
Reports/Conceptual Design/Designs/: Conceptual Design.md
Reports/Detailed Design/: Communication Subsystem.md  Drone Operator Subsystem.md  Drone to PC Link Subsystem.md  Power and Safety Subsystem.md  Sensors Subsystem.md  Signal Processing Subsystem.md
Reports/Experimental Analysis/: Experimental Analysis.md  experimental_analysis-vital.md  vitals_dsp.md
Reports/Experimental Analysis/Radar Testing Graphs/: readme.md
Reports/Project Proposal/: Project_Proposal_Draft.md
Software/vital_sense/: CMakeLists.txt  Makefile  readme.md  vital_sense.c
